--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     </properties>
 
     <build>
+        <finalName>${project.name}</finalName>
         <defaultGoal>clean package</defaultGoal>
         <plugins>
             <plugin>
