--- a/updater/changelog.yml
+++ b/updater/changelog.yml
@@ -3,4 +3,5 @@
 1.0.1:
 - "Fixed loading of non existent channels for CustomChannels add-on"
 - "Adjusted channel class to allow passwords in CustomChannels"
-- "Modified order of operations in the /ch command to allow passwords to work wihout extra messages"
+- "Modified order of operations in the /ch command to allow passwords to work without extra messages"
+- "Fixed player data not being saved"
