--- a/updater/changelog.yml
+++ b/updater/changelog.yml
@@ -7,3 +7,8 @@
 - "Fixed player data not being saved"
 1.0.2:
 - "Added /lapischat command for plugin info, help and checking what channels a player is in"
+1.0.3:
+- "Set all channel permissions to default to false"
+- "Updated for 1.13, It is still backwards compatible"
+- "Added JavaDocs for Channel, ChatPlayer, ChannelAPI and LapisChatEvent"
+- "Minor code cleanup in channels"
