Update 1.0.4 Added private messaging with the ability to override your current solution Added /r or /reply to reply to the last person who communicated with you Moved to LapisCore for the core of the plugin, this means LapisChat will get bug fixes when my other plugins do Minor bug fixes

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>net.lapismc</groupId>
     <artifactId>LapisChat</artifactId>
-    <version>1.0.3</version>
+    <version>1.0.4</version>
     <packaging>jar</packaging>
 
     <name>LapisChat</name>
@@ -56,6 +56,12 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <relocations>
+                                <relocation>
+                                    <pattern>net.lapismc.lapiscore</pattern>
+                                    <shadedPattern>net.lapismc.lapischat.core</shadedPattern>
+                                </relocation>
+                            </relocations>
                             <minimizeJar>false</minimizeJar>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
                         </configuration>
@@ -91,6 +97,11 @@
     </repositories>
 
     <dependencies>
+        <dependency>
+            <groupId>net.lapismc</groupId>
+            <artifactId>LapisCore</artifactId>
+            <version>LATEST</version>
+        </dependency>
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
