--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,14 @@
             <id>placeholderAPI</id>
             <url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
         </repository>
+        <repository>
+            <id>DiscordSRV</id>
+            <url>http://ci.scarsz.me/plugin/repository/everything/</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -118,6 +126,12 @@
             <groupId>me.clip</groupId>
             <artifactId>placeholderapi</artifactId>
             <version>2.9.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>github.scarsz.discordsrv</groupId>
+            <artifactId>DiscordSRV</artifactId>
+            <version>1.16.4</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
