--- a/updater/changelog.yml
+++ b/updater/changelog.yml
@@ -1,25 +1,28 @@
 1.0.0:
-- "Initial release"
+  - "Initial release"
 1.0.1:
-- "Fixed loading of non existent channels for CustomChannels add-on"
-- "Adjusted channel class to allow passwords in CustomChannels"
-- "Modified order of operations in the /ch command to allow passwords to work without extra messages"
-- "Fixed player data not being saved"
+  - "Fixed loading of non existent channels for CustomChannels add-on"
+  - "Adjusted channel class to allow passwords in CustomChannels"
+  - "Modified order of operations in the /ch command to allow passwords to work without extra messages"
+  - "Fixed player data not being saved"
 1.0.2:
-- "Added /lapischat command for plugin info, help and checking what channels a player is in"
+  - "Added /lapischat command for plugin info, help and checking what channels a player is in"
 1.0.3:
-- "Set all channel permissions to default to false"
-- "Updated for 1.13, It is still backwards compatible"
-- "Added JavaDocs for Channel, ChatPlayer, ChannelAPI and LapisChatEvent"
-- "Minor code cleanup in channels"
+  - "Set all channel permissions to default to false"
+  - "Updated for 1.13, It is still backwards compatible"
+  - "Added JavaDocs for Channel, ChatPlayer, ChannelAPI and LapisChatEvent"
+  - "Minor code cleanup in channels"
 1.0.4:
-- "Added private messaging with the ability to override your current solution"
-- "Added /r or /reply to reply to the last person who communicated with you"
-- "Moved to LapisCore for the core of the plugin, this means LapisChat will get bug fixes when my other plugins do"
-- "Minor bug fixes"
+  - "Added private messaging with the ability to override your current solution"
+  - "Added /r or /reply to reply to the last person who communicated with you"
+  - "Moved to LapisCore for the core of the plugin, this means LapisChat will get bug fixes when my other plugins do"
+  - "Minor bug fixes"
 1.0.5:
-- "Added DiscordSRV hook"
-- "Using command label for private message help message"
-- "Moved hooks to their own package"
+  - "Added DiscordSRV hook"
+  - "Using command label for private message help message"
+  - "Moved hooks to their own package"
 1.0.6:
-- "Fixed player receiving double messages, players will only be added to a channel if they aren't currently in it"
+  - "Fixed player receiving double messages, players will only be added to a channel if they aren't currently in it"
+1.0.7:
+  - "Updated to LapisCore 1.7.5"
+  - "Better fix for duplicated messages"
