Update 1.0.8 Finally fixed the duplicated chat issue, turned out I was an idiot doing things I didn't need to

--- a/updater/changelog.yml
+++ b/updater/changelog.yml
@@ -26,3 +26,5 @@
 1.0.7:
   - "Updated to LapisCore 1.7.5"
   - "Better fix for duplicated messages"
+1.0.8:
+  - "Fixed duplicated chat at last, tried and tested this time"
