--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: LapisChat
 version: ${project.version}
 main: net.lapismc.lapischat.LapisChat
-api-version: 1.13
+api-version: 1.15
 authors: [Dart2112]
 depend: [Vault]
-softdepend: [PlaceholderAPI]
+softdepend: [PlaceholderAPI, DiscordSRV]
