--- a/build.gradle
+++ b/build.gradle
@@ -45,14 +45,18 @@ repositories {
     maven {
         url = uri('http://repo.extendedclip.com/content/repositories/placeholderapi/')
     }
+    //Discord SRV repo
+    maven {
+        url = uri('https://nexus.scarsz.me/content/groups/public/')
+    }
 }
 
 dependencies {
-    compile 'net.lapismc:LapisCore:1.8.2'
+    compile 'net.lapismc:LapisCore:1.9.6'
     compileOnly 'net.milkbowl.vault:VaultAPI:1.7'
-    compileOnly 'me.clip:placeholderapi:2.9.1'
-    compileOnly 'com.discordsrv:discordsrv:1.19.0'
-    compileOnly 'org.spigotmc:spigot-api:1.17.1-R0.1-SNAPSHOT'
+    compileOnly 'me.clip:placeholderapi:2.10.10'
+    compileOnly 'com.discordsrv:discordsrv:1.24.0'
+    compileOnly 'org.spigotmc:spigot-api:1.18-R0.1-SNAPSHOT'
 }
 
 processResources {
