--- a/build.gradle
+++ b/build.gradle
@@ -39,24 +39,27 @@ repositories {
     }
     //Vault Repo
     maven {
-        url = uri('http://nexus.hc.to/content/repositories/pub_releases/')
+        url = uri('https://nexus.hc.to/content/repositories/pub_releases/')
     }
     //PlaceholderAPI Repo
     maven {
-        url = uri('http://repo.extendedclip.com/content/repositories/placeholderapi/')
+        url = uri('https://repo.extendedclip.com/content/repositories/placeholderapi/')
     }
     //Discord SRV repo
     maven {
         url = uri('https://nexus.scarsz.me/content/groups/public/')
     }
+    maven {
+        url = uri('https://m2.dv8tion.net/releases')
+    }
 }
 
 dependencies {
-    compile 'net.lapismc:LapisCore:1.9.6'
+    compile 'net.lapismc:LapisCore:1.10.0'
     compileOnly 'net.milkbowl.vault:VaultAPI:1.7'
-    compileOnly 'me.clip:placeholderapi:2.10.10'
-    compileOnly 'com.discordsrv:discordsrv:1.24.0'
-    compileOnly 'org.spigotmc:spigot-api:1.18-R0.1-SNAPSHOT'
+    compileOnly 'me.clip:placeholderapi:2.11.2'
+    compileOnly 'com.discordsrv:discordsrv:1.25.0'
+    compileOnly 'org.spigotmc:spigot-api:1.19-R0.1-SNAPSHOT'
 }
 
 processResources {
