--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ plugins {
 
 group = 'net.lapismc'
 archivesBaseName = "LapisChat"
-version = '1.1.0'
+version = '1.1.1'
 description = "A spiritual seccessor to HeroChat, build from the ground up to be simple and extendable"
 sourceCompatibility = '11'
 targetCompatibility = '11'
@@ -45,14 +45,17 @@ repositories {
     maven {
         url = uri('http://repo.extendedclip.com/content/repositories/placeholderapi/')
     }
+    //Discord SRV
+    maven { url 'https://nexus.scarsz.me/content/groups/public/' }
+    maven { url 'https://m2.dv8tion.net/releases' }
 }
 
 dependencies {
-    compile 'net.lapismc:LapisCore:1.8.2'
+    compile 'net.lapismc:LapisCore:1.11.0'
     compileOnly 'net.milkbowl.vault:VaultAPI:1.7'
-    compileOnly 'me.clip:placeholderapi:2.9.1'
-    compileOnly 'com.discordsrv:discordsrv:1.19.0'
-    compileOnly 'org.spigotmc:spigot-api:1.17.1-R0.1-SNAPSHOT'
+    compileOnly 'me.clip:placeholderapi:2.11.2'
+    compileOnly 'com.discordsrv:discordsrv:1.26.0'
+    compileOnly 'org.spigotmc:spigot-api:1.19.2-R0.1-SNAPSHOT'
 }
 
 processResources {
@@ -95,6 +98,7 @@ artifacts {
 }
 
 signing {
+    useGpgCmd()
     sign configurations.archives
 }
 
